--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/00_HelloWorld/bin/Debug/net6.0/HelloWorld.dll",
+            "program": "${workspaceFolder}/MoldyPotatoes.ConsoleApp/bin/Debug/net6.0/MoldyPotatoes.ConsoleApp.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/00_HelloWorld",
+            "cwd": "${workspaceFolder}/MoldyPotatoes.ConsoleApp",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "integratedTerminal",
             "stopAtEntry": false
